Fix flickering in Safari
Former-commit-id: 84fbf918a453afc9ef4344cba475dd1a4f7b2219

--- a/_sass/_tour.scss
+++ b/_sass/_tour.scss
@@ -116,6 +116,7 @@
     opacity: 0;
     z-index: -1;
     transition: opacity .5s, z-index 1ms .5s;
+    transform: translateZ(0); // Fixes flickering in Safari
     will-change: opacity;
 
     &.is-active {
